samples/_failures_safe/1761073137_5e4252_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e498ccda.c: In function ‘get_input_data’:
./samples/SAFE/__tmp_e498ccda.c:159: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_e498ccda.c:158:5: error: expected declaration or statement at end of input
  158 |     if
      |     ^~
